#42 Melhorias e finalizando integração com ChatGPT pot Thread/Assistente