@@ -71,8 +71,8 @@ public class GerarMateriaService {
 
   private static final String NULL = "null";
 
-  Pattern ENTER = Pattern.compile("[\n\r]");
-  Pattern TAB = Pattern.compile("\t");
+  private static final Pattern ENTER = Pattern.compile("[\n\r]");
+  private static final Pattern TAB = Pattern.compile("\t");
 
   private PropostaMateriaDTO convetToPropostaMateriaDTO(final String mensagem) {
 
@@ -81,8 +81,6 @@ public class GerarMateriaService {
       return objectMapper.readValue(content, PropostaMateriaDTO.class);
     } catch (final Exception e) {
       log.log(Level.SEVERE, "Erro ao converter objeto de retorno do ChatGPT: ".concat(e.getMessage()).concat(" \nConteúdo: \n\n\n").concat(mensagem), e);
-
-      // throw new RuntimeException("Erro ao tentar processar os dados do ChatGPT", e);
     }
     return null;
   }
@@ -117,19 +115,19 @@ public class GerarMateriaService {
     final LocalDateTime inicio = LocalDateTime.now();
 
     final String redesSociais = chatGPTProperties.getRedesSociais().stream()
-        .filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equals(n.trim().toLowerCase())).map(n -> n.trim().toLowerCase())
+        .filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim())).map(n -> n.trim().toLowerCase())
         .collect(Collectors.joining(", "));
     final String conhecimento = chatGPTProperties.getEspecialista().stream()
-        .filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equals(n.trim().toLowerCase())).map(n -> n.trim().toLowerCase())
+        .filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim())).map(n -> n.trim().toLowerCase())
         .collect(Collectors.joining(", "));
     // Pegar interesses
-    final String termos = request.getTermos().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equals(n.trim().toLowerCase()))
+    final String termos = request.getTermos().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim()))
         .map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
 
     final String audiencias = nonNull(request.getAudiencias()) && !request.getAudiencias().isEmpty()
-        ? request.getAudiencias().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equals(n.trim().toLowerCase()))
+        ? request.getAudiencias().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim()))
             .map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "))
-        : chatGPTProperties.getAudiencias().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equals(n.trim().toLowerCase()))
+        : chatGPTProperties.getAudiencias().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim()))
             .map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
 
     final String perguntaDadosMateria = chatGPTProperties.getPrompts().getPedirDadosMateria().formatted(conhecimento, chatGPTProperties.getSite(), redesSociais,
@@ -146,15 +144,13 @@ public class GerarMateriaService {
 
     final List<String> itensDaMateriaRetornoGPT = chatgptService.perguntarAssistente(perguntaDadosMateria, uuid, inicio);
 
-
     final List<PropostaMateriaDTO> propostasSemMateria = itensDaMateriaRetornoGPT.stream().map(this::convetToPropostaMateriaDTO).filter(n -> Objects.nonNull(n))
-        .collect(Collectors.toList());
+        .toList();
 
-    
     PropostaMateriaDTO propostaMateriaDTO = nonNull(propostasSemMateria) && !propostasSemMateria.isEmpty()
         ? propostasSemMateria.get(propostasSemMateria.size() - 1)
         : null;
-    
+
     if (isNull(propostaMateriaDTO)) {
       log.info("Não conseguiu gerar a proposta de mateiria.");
       return null;
@@ -163,7 +159,7 @@ public class GerarMateriaService {
     final List<String> titulosArry = new ArrayList<>(propostaMateriaDTO.getTitulos());
     titulosArry.add(propostaMateriaDTO.getTema());
 
-    final String titulos = titulosArry.stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equals(n.trim().toLowerCase()))
+    final String titulos = titulosArry.stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim()))
         .collect(Collectors.joining(", \n"));
 
     /**************************************
@@ -213,7 +209,7 @@ public class GerarMateriaService {
       materia = textoMateria(materiaRetornoGPT.get(materiaRetornoGPT.size() - 1));
     }
 
-    if(nonNull(materia) && !materia.isBlank() && materia.indexOf("#")>0) {
+    if (nonNull(materia) && !materia.isBlank() && materia.contains("#")) {
       materia = convertMarkdownToHtml(materia);
     }
     if (tentativas >= 3) {
@@ -260,7 +256,7 @@ public class GerarMateriaService {
     final var perguntaDadosMateria = chatGPTProperties.getPrompts().getPedirDadosMateria().formatted(conhecimento, chatGPTProperties.getSite(), redesSociais,
         audiencias, termos, tema);
     final List<String> itensDaMateriaRetornoGPT = chatgptService.perguntarAssistente(perguntaDadosMateria, uuid, inicio);
-    final List<PropostaMateriaDTO> propostasSemMateria = itensDaMateriaRetornoGPT.stream().map(this::convetToPropostaMateriaDTO).collect(Collectors.toList());
+    final List<PropostaMateriaDTO> propostasSemMateria = itensDaMateriaRetornoGPT.stream().map(this::convetToPropostaMateriaDTO).toList();
     final List<String> titulosArry = new ArrayList<>();
     propostasSemMateria.forEach(n -> {
       titulosArry.addAll(n.getTitulos());
@@ -277,8 +273,11 @@ public class GerarMateriaService {
       PropostaMateriaDTO itemSalvar;
       for (final PropostaMateriaDTO item : propostasSemMateria) {
         for (final String mensagem : materiaRetornoGPT) {
-          if (nonNull(mensagem) && !mensagem.isBlank() && nonNull(itemSalvar = convert.copy(item, uuid, limparTexto(mensagem)))) {
-            propostasRetorno.add(this.salvarPropostaMateria(itemSalvar, request, idMapaProcessamento));
+          if (nonNull(mensagem) && !mensagem.isBlank()) {
+            itemSalvar = convert.copy(item, uuid, limparTexto(mensagem));
+            if (nonNull(itemSalvar)) {
+              propostasRetorno.add(this.salvarPropostaMateria(itemSalvar, request, idMapaProcessamento));
+            }
           }
         }
       }
@@ -305,7 +304,7 @@ public class GerarMateriaService {
         }
         n.setUuid(in.getUuid());
         return n;
-      }).collect(Collectors.toList()));
+      }).toList());
 
       if (nonNull(request.getCategoria())) {
         final var categoria = categoriaRepository.findById(request.getCategoria());
@@ -344,7 +343,7 @@ public class GerarMateriaService {
         }
         n.setUuid(in.getUuid());
         return n;
-      }).collect(Collectors.toList()));
+      }).toList());
 
       materia.setStatus(StatusProcessamentoEnum.PROCESSAR);
       if (nonNull(idMapaProcessamento)) {
